Support for list payload ids
